[tool.poetry]
name = "llmstudio-monorepo"
version = "0.0.1"
description = "Prompt Perfection at Your Fingertips"
authors = ["Cláudio Lemos <claudio@tensorops.ai>"]
license = "MIT"
homepage = "https://llmstudio.ai/"
repository = "https://github.com/tensoropsai/llmstudio"
documentation = "https://docs.llmstudio.ai"
readme = "README.md"
keywords = ["ml", "ai", "llm", "llmops", "openai", "langchain", "chatgpt", "llmstudio", "tensorops"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tensoropsai/llmstudio/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
llmstudio = { path = "libs/llmstudio/", develop = true }
llmstudio-core = { path = "libs/core/", develop = true }
llmstudio-tracker = { path = "libs/tracker/", develop = true }
llmstudio-proxy = { path = "libs/proxy/", develop = true }

[tool.poetry.scripts]
llmstudio = "llmstudio.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
