[tool.poetry]
name = "llmstudio-core"
version = "0.1.0"
description = "LLMStudio core capabilities for routing llm calls for any vendor."
authors = ["Cláudio Lemos <claudio.lemos@tensorops.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5"
requests = "^2.31"
fastapi = "^0.109"
uvicorn = "^0.27"
openai = "^1.26"
tiktoken = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
