[tool.poetry]
name = "llmstudio"
version = "1.0.2a4"
description = "Prompt Perfection at Your Fingertips"
authors = ["Cláudio Lemos <claudio@tensorops.ai>"]
license = "MIT"
homepage = "https://llmstudio.ai/"
repository = "https://github.com/tensoropsai/llmstudio"
documentation = "https://docs.llmstudio.ai"
readme = "README.md"
keywords = ["ml", "ai", "llm", "llmops", "openai", "langchain", "chatgpt", "llmstudio", "tensorops"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tensoropsai/llmstudio/issues"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5"
python-dotenv = ">=0.4.0,<2.0.0"
langchain = "^0"
langchain-experimental = "^0"
llmstudio-core = "^1.0.0"

llmstudio-tracker = { version = "^1.0.1", optional = true }
llmstudio-proxy = { version = "^1.0.1", optional = true }

[tool.poetry.extras]
proxy = ["llmstudio-proxy"]
tracker = ["llmstudio-tracker"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0"
mypy = "^1.5"
ruff = "^0.0.284"
black = "^23.7"
pre-commit = "^3.7"
flake8= "^7"
ipykernel = "^6"
llmstudio-core = { path = "../core/", develop = true }
llmstudio-tracker = { path = "../tracker/", develop = true }
llmstudio-proxy = { path = "../proxy/", develop = true }

[tool.poetry.scripts]
llmstudio = "llmstudio.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
