[tool.poetry]
name = "llmstudio-proxy"
version = "1.0.1a6"
description = ""
authors = ["Diogo Goncalves <diogo.goncalves@tensorops.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5"
requests = "^2.31"
fastapi = "^0.115.5"
uvicorn = "^0.27"
tiktoken = "^0.7"
python-dotenv = "^1.0.1"
toml = "^0.10"
llmstudio-core = "1.0.1a3"

[tool.poetry.group.dev.dependencies]
llmstudio-core = { path = "../core/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
