[tool.poetry]
name = "llmstudio-tracker"
version = "1.0.3"
description = "LLMstudio Tracker is the module of LLMstudio that allows monitoring and logging your LLM calls. It supports seamless integration with the LLMstudio environment through configurable tracking servers, allowing for detailed insights into synchronous and asynchronous chat interactions. By leveraging LLMstudio Tracker, users can gain insights on model performance and streamline development workflows with actionable analytics."
authors = ["Diogo Goncalves <diogo.goncalves@tensorops.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.5"
sqlalchemy = "^2"
toml = "^0.10"
requests = "^2.31"
fastapi = "^0.115.5"
uvicorn = "^0.27"
sqlalchemy-bigquery = "^1.12.0"
google-cloud-bigquery-storage = "^2.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
